--- a/index.html
+++ b/index.html
@@ -1,61 +1,35 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>Aluraflix</title>
-    </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Em busca da cidade perdida</title>
+</head>
+<body>
 
 
- <body>
-    <header>ALURAFLIX</header>
 
-    <section class="chamada"> 
-<div class="chamada-texto">
 
-    <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-    <p>#homem-aranha</p>
 
+
+
+
+
+
+<main>
+    <div class="passo ativo" id="passo-0">
+        <p>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
+        <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
+        <button class="btn-proximo" data-proximo="2">Pernambuco</button>
     </div>
-
-    <div> 
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-</div>
-
-</section>
-
-
-<section class="categoria"> 
-    <h2>Filmes e séries</h2>
-    <div class="categoria-videos"> 
-      <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-        <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
-      </a>
-      <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-        <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
-      </a>
-      <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-        <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
-      </a>
-      <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-        <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-      </a>
-      <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-        <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
-      </a>
+    <div class="passo" id="passo-1">
+        <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
+        <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+        <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
     </div>
-  </section>
-  
- 
+    </main>
 
+    </body>
 
-
-</body>
-
-
-
-
-
-
-</html>
+    </html>html/>
+    
