--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 
 <main>
     <div class="passo ativo" id="passo-0">
-        <p>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-        <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-        <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+        <p>Melhor Vilão</p>
+        <button class="btn-proximo" data-proximo="1">Hannibal Lecter</button>
+        <button class="btn-proximo" data-proximo="2">Johan Liebert</button>
     </div>
     <div class="passo" id="passo-1">
-        <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-        <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
-        <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+        <p>Melhor Protagonista</p>
+        <button class="btn-proximo" data-proximo="3">Will Graham</button>
+        <button class="btn-proximo" data-proximo="4">DrTenma</button>
     </div>
     <div class="passo" id="passo-2">
-        <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
-        <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-        <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+        <p>Melhor Série</p>
+        <button class="btn-proximo" data-proximo="5">Hannibal</button>
+        <button class="btn-proximo" data-proximo="6">Monster</button>
     </div>
     </main>
 
